	- Focus in the editor : Bug #339269, Bug #339195, Bug #339389
	- Bug #339269 : Quickadd has the focus on launch
	- Bug #339583 : patch enter key to confirm a delete (thanks Gérôme Fournier)
	- Typos : Bug #339268 Bug #339492 and other patches from Gérôme Fournier.

2009-06-01 Getting Things Gnome ! 0.1
	* Bumping version number. First release of GTG

2009-03-01 Getting Things Gnome! 0.0.9rc3
	* pane/sidebar not saved

2009-03-01 Getting Things Gnome! 0.0.9rc2
	* firstrun_tasks.xml not found on first launch

2009-03-01 Getting Things Gnome! 0.0.9rc1
	* First official release 0.1rc1